[gd_scene load_steps=7 format=3 uid="uid://hf0ufebgdemw"]

[ext_resource type="Script" uid="uid://mtgf8kl85q48" path="res://component/services/dialogue_service.gd" id="1_03yoc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0gb8y"]

[sub_resource type="Animation" id="Animation_ci1mv"]
resource_name = "show_dialogue"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 648), Vector2(0, 508)]
}

[sub_resource type="Animation" id="Animation_pycoq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 648)]
}

[sub_resource type="Animation" id="Animation_4sjaa"]
resource_name = "hide_dialogue"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogueContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 508), Vector2(0, 648)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hov33"]
_data = {
&"RESET": SubResource("Animation_pycoq"),
&"hide_dialogue": SubResource("Animation_4sjaa"),
&"show_dialogue": SubResource("Animation_ci1mv")
}

[node name="DialogueService" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03yoc")

[node name="DialogueContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="DialogueContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DialogueContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="Icon" type="TextureRect" parent="DialogueContainer/PanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_0gb8y")
expand_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="DialogueContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueContainer/PanelContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpeakerLabel" type="Label" parent="DialogueContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
theme_type_variation = &"DialogueSpeakerLabel"
text = "Test"
autowrap_mode = 2

[node name="MessageLabel" type="Label" parent="DialogueContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "Hi! Here's some dialogue!"
autowrap_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_hov33")
}
speed_scale = 10.0
